[project]
name = "ops-console"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["F", "N", "I", "E", "W", "PL"]
ignore = ["W191", "E501", "PLR2004", "PLR0913"]


[tool.ruff.format]
exclude = ["list"]
quote-style = "single"

